syntax = "proto3";

package com.chuntao;

import "google/protobuf/timestamp.proto";
import "sensor.proto";

option java_multiple_files = true;
option java_package = "com.chuntao.service";
option java_outer_classname = "HvacService";

// HVAC Service: turn on HVAC based on analyse response
service HVAC {
  // Client-side streaming RPC for controlling HVAC
  rpc HvacControl(stream HvacRequest) returns (HvacCommand) {}
  // Bidirectional streaming RPC for HVAC switching
  rpc HvacSwitch(stream HvacCommand) returns (stream HvacResponse) {}
}

message HvacRequest {
  int32 pollution_level = 1;
}

message HvacCommand {
  enum Action {
    START = 0;
    STOP = 1;
  }
  Action action = 1;
  google.protobuf.Timestamp updated_time = 2;
}

message HvacResponse {
  string status = 1;
  int32 pollution_level = 2;
  google.protobuf.Timestamp updated_time = 3;
}